feat: update .env.example to clarify ZeroBounce API Key usage

--- a/api/.env.example
+++ b/api/.env.example
@@ -66,7 +66,7 @@ EMAIL_VALIDATION_ENABLED=true
 # Provider Options: 'zerobounce' or 'deep-validator'
 EMAIL_VALIDATION_PROVIDER=deep-validator
 
-# ZeroBounce API Key (if using zerobounce provider)
+# ZeroBounce API Key
 # Get free 100/month at: https://www.zerobounce.net
 ZEROBOUNCE_API_KEY=
 
