--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "deep-email-validator": "^0.1.21",
     "mysql2": "^3.17.1",
     "nodemailer": "^8.0.1",
     "passport": "^0.7.0",
