feat: add ZeroBounce API URL to .env.example for email validation

--- a/api/.env.example
+++ b/api/.env.example
@@ -69,6 +69,7 @@ EMAIL_VALIDATION_PROVIDER=deep-validator
 # ZeroBounce API Key
 # Get free 100/month at: https://www.zerobounce.net
 ZEROBOUNCE_API_KEY=
+ZEROBOUNCE_API_URL=https://api.zerobounce.net/v2
 
 # ========================================
 # NOTES FOR DEVELOPERS
