--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "seed": "ts-node -r tsconfig-paths/register src/database/seeders/run-seeder.ts"
+    "seed": "ts-node -r tsconfig-paths/register src/database/seeders/run-seeder.ts",
+    "migration:generate": "typeorm-ts-node-commonjs migration:generate ./src/database/migrations/Migration -d ./src/database/data-source.ts",
+    "migration:create": "typeorm-ts-node-commonjs migration:create ./src/database/migrations/Migration",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/database/data-source.ts",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ./src/database/data-source.ts",
+    "migration:show": "typeorm-ts-node-commonjs migration:show -d ./src/database/data-source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -34,13 +39,13 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "deep-email-validator": "^0.1.21",
+    "dotenv": "^17.3.1",
     "mysql2": "^3.17.1",
     "nodemailer": "^8.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.28"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -69,6 +74,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "typeorm": "^0.3.28",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   },
