--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,12 @@ env:
   NODE_VERSION: '20.x'
 
 jobs:
-  # Lint and type check
   lint:
     name: Lint & Type Check
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./api
     
     steps:
       - name: Checkout code
@@ -30,22 +32,21 @@ jobs:
           version: 8
 
       - name: Install dependencies
-        run: pnpm install
-        working-directory: ./api
+        run: pnpm install --frozen-lockfile
 
       - name: Run ESLint
         run: pnpm run lint
-        working-directory: ./api
 
       - name: Check TypeScript
         run: pnpm exec tsc --noEmit
-        working-directory: ./api
 
-  # Build application
   build:
     name: Build
     runs-on: ubuntu-latest
     needs: [lint]
+    defaults:
+      run:
+        working-directory: ./api
     
     steps:
       - name: Checkout code
@@ -62,17 +63,17 @@ jobs:
           version: 8
 
       - name: Install dependencies
-        run: pnpm install
-        working-directory: ./api
+        run: pnpm install --frozen-lockfile
 
       - name: Build application
         run: pnpm run build
-        working-directory: ./api
 
-  # Security check
   security:
     name: Security Audit
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./api
     
     steps:
       - name: Checkout code
@@ -85,5 +86,4 @@ jobs:
 
       - name: Run security audit
         run: pnpm audit
-        working-directory: ./api
         continue-on-error: true
